--- a/style.css
+++ b/style.css
@@ -3,3 +3,11 @@
 ::-webkit-scrollbar {
     display: none;
 }
+
+# {
+    mask-image: linear-gradient(to right,
+            rgba(0, 0, 0, 0),
+            rgba(0, 0, 0, 1) 40%,
+            rgba(0, 0, 0, 1) 60%,
+            rgba(0, 0, 0, 0));
+}
