--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     display: none;
 }
 
-# {
+#hole {
     mask-image: linear-gradient(to right,
             rgba(0, 0, 0, 0),
             rgba(0, 0, 0, 1) 40%,
