--- a/style.css
+++ b/style.css
@@ -1,86 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
     display: none;
-}
-
-#box {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-transform: uppercase;
-    font-weight: 555;
-}
-
-#container {
-    width: 100%;
-    height: 100%;
-    background-color: transparent;
-    padding: 5px;
-    display: flex;
-    flex-direction: column;
-}
-
-#title img {
-    width: 100%;
-    height: 100%;
-}
-
-#menu {
-    width: 100%;
-    height: max-content;
-    display: flex;
-    justify-content: space-between;
-    text-decoration: underline;
-}
-
-#menu #date-time #pages #about #credits {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: transparent;
-}
-
-#date-time {
-    font-size: 2.5vh;
-    font-weight: 700;
-}
-
-#pj-preview {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-top: 13px;
-}
-
-.project-1 {
-    width: 100%;
-    display: flex;
-}
-
-#pj-name {
-    position: absolute;
-}
-
-.pj {
-    max-width: 50%;
-}
-
-#pj-timeline {
-    width: 100%;
-    height: 100%;
-}
-
-#footer {
-    width: 100%;
-    height: 100%;
 }
